# Spatiotemporal-FS

./: .gitignore  CRO_Spatiotemporal_FS.py  LICENCE  Test_Low.eps  best_solution.csv  build_dataset.ipynb  build_dataset.py  clustering.ipynb  clustering.py  download_data.ipynb  download_data.py  fit_history.csv  indiv_history.csv  lagged_dataset.ipynb  lagged_dataset.py  last_population.csv  local_variables_extraction.ipynb  locals_variables.py  nohup.out  pre_data.ipynb  prob_history.csv  pyproject.toml  to_daily.ipynb
Data/Paper/: ENSO.csv  ENSO_index.csv  IOD.csv  IOD_index.csv  NAO.csv  averagesmslEurope5.csv  averagesmslWorld5.csv  averagesolrNorth_Atlantic5.csv  averagesolrWorld5.csv  averagessicArtic5.csv  averagessm1Europe5.csv  averagessstNorth_Atlantic5.csv  averagessstWorld5.csv  averagest2mEurope5.csv  averagestpEurope5.csv  averagesz500Europe5.csv  averagesz500World5.csv  centroidsmslEurope5.csv  centroidsmslWorld5.csv  centroidsolrNorth_Atlantic5.csv  centroidsolrWorld5.csv  centroidssicArtic5.csv  centroidssm1Europe5.csv  centroidssstNorth_Atlantic5.csv  centroidssstWorld5.csv  centroidst2mEurope5.csv  centroidstpEurope5.csv  centroidsz500Europe5.csv  centroidsz500World5.csv  data_CO2.csv  data_CO2.nc  labelsmslEurope5.csv  labelsolrNorth_Atlantic5.csv  labelssicArtic5.csv  labelssm1Europe5.csv  labelssstNorth_Atlantic5.csv  labelssstWorld5.csv  labelst2mEurope5.csv  labelstpEurope5.csv  labelsz500Europe5.csv  (+3 more)
Data/Test_newcluster_1993_2016/: averagesmslEurope5.csv  averagesmslWorld5.csv  averagesolrNorth_Atlantic5.csv  averagesolrWorld5.csv  (+30 more)
(+138 files in other folders)
